--- a/modules/keras_model_spec.ipynb
+++ b/modules/keras_model_spec.ipynb
@@ -32,8 +32,8 @@
    "outputs": [],
    "source": [
     "# Чтение таблицы ключевых точек и директории изображении. Указать путь к CSV файлу и изображениям.\n",
-    "csv_file_path = Path(r\"C:\\Users\\Sony\\Desktop\\University\\Programs\\test\\test_dataset.csv\")\n",
-    "images_dirname = Path(r\"C:\\Users\\Sony\\Desktop\\University\\Programs\\test\\colored\")\n",
+    "csv_file_path = Path(r\"<Абсолютный путь к файлу с аннотациями>\\название_dataset.csv\")\n",
+    "images_dirname = Path(r\"<Абсолютный путь к папке с изображениями>\")\n",
     "\n",
     "# Получения основных данных \n",
     "SHAPE, last_image_index, curr_img_count, current_wd, keypoints_df, sorted_images, images_count_initail_state, csv_initial_state = get_main_data(csv_file_path, images_dirname, True)"
@@ -46,7 +46,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Проверка. Просмотр заглавления\n",
+    "# Проверка. Просмотр заглавления таблицы\n",
     "keypoints_df.head()"
    ]
   },
@@ -68,8 +68,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Просмотр изображении с аннотациями по номеру.\n",
-    "show_cowannot(7, keypoints_df, images_dirname, sorted_images)"
+    "# Просмотр изображении с аннотациями по номеру(индексу)\n",
+    "show_cowannot(0, keypoints_df, images_dirname, sorted_images)"
    ]
   },
   {
@@ -118,8 +118,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Просмотр изображении с аннотациями по номеру.\n",
-    "show_cowannot(18, keypoints_df, images_dirname, sorted_images)"
+    "# Просмотр изображении с аннотациями по номеру(индексу)\n",
+    "show_cowannot(0, keypoints_df, images_dirname, sorted_images)"
    ]
   },
   {
@@ -228,6 +228,32 @@
     "history = model.fit(X_train, y_train, \n",
     "                 validation_split=0.2, shuffle=True, \n",
     "                 epochs=epochs, batch_size=20)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "17750652",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Показать график изменения точности предсказании\n",
+    "plt.plot(history.history['acc'])\n",
+    "plt.plot(history.history['val_acc'])\n",
+    "plt.title('model accuracy')\n",
+    "plt.ylabel('accuracy')\n",
+    "plt.xlabel('epoch')\n",
+    "plt.legend(['train', 'test'], loc='upper left')\n",
+    "plt.show()\n",
+    "\n",
+    "# Показать график изменения ошибки предсказании\n",
+    "plt.plot(history.history['loss'])\n",
+    "plt.plot(history.history['val_loss'])\n",
+    "plt.title('model loss')\n",
+    "plt.ylabel('loss')\n",
+    "plt.xlabel('epoch')\n",
+    "plt.legend(['train', 'test'], loc='upper left')\n",
+    "plt.show()"
    ]
   },
   {
